--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
+# --- Python Bytecode ---
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# --- Virtual Environments ---
+.venv/
+venv/
+env/
+ENV/
+
+# --- Jupyter Notebook Checkpoints ---
+.ipynb_checkpoints/
+
+# --- Editor / IDE Configs ---
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# --- System Files ---
+.DS_Store
+Thumbs.db
+
+# --- Node (because Commitizen is installed) ---
+node_modules/
+package-lock.json
+
+# --- Tests (per your repo) ---
 /tests
